# linuxmce

./: .gitignore  .gitlab-ci.yml  .gitmodules  Construct  MakeRelease_All.bat  MakeRelease_Symbian_S60.bat  MakeRelease_Windows.bat  MakeRelease_WindowsCE.bat  Makefile  Makefile.linux  Makefile_all  README  README.md  configure  hooks  localconfig.inc.php  pluto.sln  rpi2-build-image-jessie.sh  rpi2-build-image-trusty.sh  rpi2-build-image-wheezy.sh  test.txt
raspbian/libcec-platform-1.0.10+dfsg1/: CMakeLists.txt  platform-config.cmake.in  platform.pc.in
raspbian/libcec-platform-1.0.10+dfsg1/.pc/: applied-patches
raspbian/libcec-platform-1.0.10+dfsg1/.pc/02_rename_lib_to_cec-platform.patch/: CMakeLists.txt
raspbian/libcec-platform-1.0.10+dfsg1/.pc/03_fix_pkgconfig_and_config.cmake.patch/: CMakeLists.txt
raspbian/libcec-platform-1.0.10+dfsg1/debian/: changelog  control  copyright  libcec-platform-dev.install  libcec-platform1.symbols  rules  watch
raspbian/libcec-platform-1.0.10+dfsg1/debian/patches/: 01_use_system_fstrcmp.patch  02_rename_lib_to_cec-platform.patch  03_fix_pkgconfig_and_config.cmake.patch
raspbian/libcec-platform-1.0.10+dfsg1/src/util/: StringUtils.cpp
src/ActivateOrbiter/: AUTHORS  Activate_Orbiter_Plasmoid.cpp  Activate_Orbiter_Plasmoid.h  CMakeLists.txt  DB.h  DEPRECATED  mkr_postinst.sh  mkr_postrm.sh  plasma-activateorbiter.cpp  plasma-activateorbiter.h  plasma-applet-activateorbiter.desktop
src/lmce_launch_manager/src/: Launch_Manager.cpp  Launch_Manager.h  Launch_ManagerBase.cpp  Makefile.am  Makefile.in  StartCoreServices.sh  lmce_launch_manager.desktop  lmce_launch_manager.lsm  lmce_launch_manager.sh  lmce_launch_managerwidget.cpp  lmce_launch_managerwidget.h  lmce_launch_managerwidgetbase.ui.h  main.cpp
src/mce-installer/src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  RunShellCommand.c  RunShellCommand.h  Step0A.c  Step0A.h  Step0B.c  Step0B.h  Step1A.c  Step1A.h  Step1B.c  Step1B.h  Step1C.c  Step1C.h  Step1D.c  Step1D.h  Step2A.c  Step2A.h  Step2C.c  Step2C.h  Step2E.c  Step2E.h  Step2F.c  Step2F.h  Step3.c  Step3.h  Step4.c  Step4.h  Step5.c  Step5.h  Step6.c  Step6.h  StepAptMirror.c  StepAptMirror.h  StepCheckSystem.c  StepCheckSystem.h  StepConfFiles.c  StepConfFiles.h  (+49 more)
src/mce-installer/src/.deps/: Step1A.P  Step1B.P  Step1C.P  Step1D.P  callbacks.P  common.P  main.P
src/mce-launcher/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  configure.in.bak
src/mce-launcher/autom4te.cache/: output.0  traces.0
src/mce-launcher/debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  mce-launcher-default.ex  mce-launcher.desktop  mce-launcher.doc-base.EX  mce-launcher.xorg.conf  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
src/mce-launcher/po/: Makefile  Makefile.in
src/mce-launcher/src/: Makefile  Makefile.am  Makefile.am.bak  Makefile.in  listener.c  listener.h  main.c  mce-launcher-core.sh  mce-launcher.glade
src/mce-launcher/src/.deps/: callbacks.P  listener.P  main.P
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/: Makefile  Makefile.kernel26  README  configure.ac  ds1x1f.c  fxotune.h  fxstest.c  gendigits.c  jpah.h  makeopts.in  mec.h  mec2.h  mec3-float.h  mec3.h  opvxa1200.c  patlooptest.c  pattest.c  pciradio.c  sec-2.h  sec.h  tonezone.c  tonezone.h  torisa.c  torisatool.c  wcfxo.c  wcfxsusb.c  wct1xxp.c  wctdm.c  wcte11xp.c  wcte12xp.c  zaptel-base.c  zaptel.conf.sample  zaptel.h  zaptel.sysconfig  zaptel.xml  zconfig.h  zonedata.c  ztcfg-dude.c  ztcfg.c  ztmonitor.c  (+1 more)
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/build_tools/: make_firmware_object
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/cwain/: Makefile  cwain.c  zaptel.conf  zaptel.conf.doubleE1
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/debian/: TODO.Debian  changelog  control  copyright  docs  libtonezone-dev.install  libtonezone-dev.links  rules  watch  zaptel.init  zaptel.modprobe.d  zaptel.modules
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/doc/: fxotune.8  ztcfg.8  ztmonitor.8  zttool.8
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/firmware/: Makefile  firmware.xml
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/hpec/: hpec_zaptel.h
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/oct612x/: Makefile
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/qozap/: qozap.h  zapata.conf  zaptel.conf.octoBRI
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/vzaphfc/: ChangeLog  Makefile  README  fifo.c  fifo.h  vzaphfc_main.c
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/wct4xxp/: Makefile.kernel26  base.c  wct4xxp-diag.c  wct4xxp.h
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/wctc4xxp/: Makefile  base.c
ubuntu/asterisk/backported/to-feisty/zaptel-1.4.3~dfsg/xpp/: .version  ChangeLog  Makefile  card_bri.h  card_fxo.c  card_global.c  card_global.h  init_card_3_26  xdefs.h  xpd.h  xpp_usb.c  xpp_zap.c  xpp_zap.h  xproto.c  (+3 more)
ubuntu/linphone-1.3.5/console/: Makefile.am  Makefile.in  commands.c  linphonec.c  sipomatic.h
ubuntu/linphone-1.3.5/coreapi/: Makefile.am  arts.c  enum.c  linphonecore.h  misc.c  sdphandler.c
ubuntu/linphone-1.3.5/oRTP/src/: Makefile.am  Makefile.in  rtpsession.c
ubuntu/linphone-1.3.5/oRTP/src/tests/: mrtprecv.c  rtprecv.c  rtpsend.c  tevrtprecv.c  tevrtpsend.c
ubuntu/linphone-1.3.5/support/: Makefile.am  Makefile.in  gshell.c  uglib.c  uglib.h
ubuntu/xine-lib-1.1.2+repacked1/src/: Makefile.am
ubuntu/xine-lib-1.1.2+repacked1/src/demuxers/: demux_asf.c  demux_qt.c  demux_rawdv.c  demux_shn.c
ubuntu/xine-lib-1.1.2+repacked1/src/input/: input_cdda.c  input_dvb.c
ubuntu/xine-lib-1.1.2+repacked1/src/libflac/: decoder_flac.c
ubuntu/xine-lib-1.1.2+repacked1/src/libpostproc/: Makefile.am
ubuntu/xine-lib-1.1.2+repacked1/src/libxinevdec/: gdkpixbuf.c
ubuntu/xine-lib-1.1.2+repacked1/src/post/planar/: Makefile.am
(+33174 files in other folders)
