include $(top_srcdir)/misc/Makefile.common

# Order is important be careful changing SUBDIRS
SUBDIRS = \
	xine-utils \
	xine-engine \
	audio_out \
	video_out \
	dxr3 \
	input \
	demuxers \
	libmpeg2 \
	liba52 \
	libspudec \
	libspucc \
	libspucmml \
	libspudvb \
	libsputext \
	libdts \
	libw32dll \
	liblpcm \
	libxinevdec \
	libxineadec \
	libvorbis \
	libtheora \
	libspeex \
	libreal \
	libflac \
        libmusepack \
	libpostproc \
	post
